@@ -36,9 +36,9 @@ includeTemplate("overall.header");
  *	- tools/despam-comments.php
  *	- tools/find_orphans.php
  *	- tools/validate_albums.php
-*/ 
-?>
+*/
 
+?>
     <div class="g-header">
 	<div class="g-pagetitle"><?php echo $gallery->app->galleryTitle ?></div>
     </div>
