@@ -1,3 +1,12 @@
+2006-10-14 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b4
+
+ * CHANGE/NEW: #1543131
+
+   The Subalbum tree in the classic theme is now a collapsable fading tree.
+   Done via Yahoo! UI treeview.
+
+   Modified printChildren()
+
 2006-10-14 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b3
 
  * Fix: After the first succesfull install there is no $inst_type 
